examples/effects/row_op_call_undeclared.err.expected
error: effect not handled: Io
  --> examples/effects/row_op_call_undeclared.kai:12:11
     |
  12 |   Io.print("hi")
     |           ^
  = note: `greet`'s declared row does not include `Io`
  = note: missing effect: `Io`
  = note: enclosing row: (empty)
  = help: either declare `greet : ... / Io`, or wrap this call site in `handle { ... } with Io { ... }`
  = help: add `/ Io` to `greet`'s return type
  = help: or wrap the call in `handle { ... } with Io { ... }`
